fixed border shadow on mobile

--- a/src/components/Board/board-ui.css
+++ b/src/components/Board/board-ui.css
@@ -51,6 +51,7 @@
   gap: 15px;
   transition: all 0.3s linear;
 }
+
 .board-buttons {
   display: flex;
   justify-content: space-evenly;
@@ -87,6 +88,7 @@
   .board {
     gap: 4px;
     width: min(95vh, 95vw);
+    box-shadow: 2px 5px 2px black;
   }
   .status {
     padding: 0 0.5rem;
